sets up scss and js watching in gulp file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bob Brown - Online Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -32,6 +32,7 @@
         </div>
 
     </div>
+    <script src="./assets/js/main.min.js"></script>
 </body>
 
 </html>
