--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
             <a>Portfolio</a>
         </nav>
 
+        <div class='box'>
+            <div class='wave -one'></div>
+            <div class='wave -two'></div>
+            <div class='wave -three'></div>
+            <div class='title'>Capacities</div>
+        </div>
+
         <div class="bodyDiv">
             <div class="about-me">
                 <h2>About Me</h2>
