--- a/assets/public/index.html
+++ b/assets/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Robert Brown Portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
