--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,6 +19,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Mfizz icons -->
+    <link rel="stylesheet" href="./font-mfizz-2.4.1/font-mfizz.css">
     <title>React App</title>
   </head>
   <body>
