removes unnecessary files and adds scroll listening for css animations

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,6 +22,7 @@
     -->
     <!-- Mfizz icons -->
     <link rel="stylesheet" href="./font-mfizz-2.4.1/font-mfizz.css">
+    <!-- jQuery -->
     <title>React App</title>
   </head>
   <body>
