adds some final touches to images and styling

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
     <!-- Mfizz icons -->
     <link rel="stylesheet" href="./font-mfizz-2.4.1/font-mfizz.css">
     <!-- jQuery -->
-    <title>React App</title>
+    <title>Robert Brown</title>
   </head>
   <body>
     <noscript>
